--- a/Alura.LeilaoOnline/Alura.LeilaoOnline.WebApp/Views/Usuarios/Agradecimento.cshtml
+++ b/Alura.LeilaoOnline/Alura.LeilaoOnline.WebApp/Views/Usuarios/Agradecimento.cshtml
@@ -30,7 +30,7 @@
                 <div class="col s12 m8 offset-m2">
                     <div class="card-panel">
                         <h5 class="brand-logo center-align"><span>Leilões</span><span> online</span></h5>
-                        <h4>Obrigado por se registrar!</h4>
+                        <h4 id="obrigado">Obrigado por se registrar!</h4>
                         <p class="flow-text">
                             Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis.
                         </p>
