segregando responsabilidades e alterado namespaces testes

--- a/Alura.LeilaoOnline/Alura.LeilaoOnline.WebApp/Views/Home/Index.cshtml
+++ b/Alura.LeilaoOnline/Alura.LeilaoOnline.WebApp/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
 
                         </div>
                         <div class="card-content">
-                            <p>@leilao.Descricao.Substring(0, 150)</p>
+                            <p>@leilao.Descricao</p>
                         </div>
                         <div class="card-action">
                             <a asp-action="Detalhes" asp-route-id="@leilao.Id">Detalhes</a>
